search by speech

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <div class="app-main">
             <div class="search-bar">
                 <i class="fas fa-search"></i>
-                <input type="text" placeholder="Enter city name">
+                <input class="searchInput" type="text" placeholder="Enter city name">
+                <span class="microphone"><i class="fas fa-microphone"></i></span>
             </div>
 
             <div class="weather-content">
